# libaribcaption

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  README_ja.md  libaribcaption.pc.in
cmake/: EnableCMP0048.cmake  GeneratePkgConfig.cmake  aribcaption-config.cmake.in
include/: aligned_alloc.hpp  aligned_allocator.hpp  aribcaption.hpp  b24.hpp  caption.hpp  color.hpp  context.hpp  decoder.hpp  drcs.hpp  image.hpp  renderer.hpp
include/aribcaption/: aligned_alloc.hpp  aribcaption.h  aribcaption.hpp  aribcc_config.h.in  aribcc_export.h  b24.hpp  caption.h  caption.hpp  color.h  color.hpp  config.h.in  context.h  context.hpp  decoder.h  decoder.hpp  image.h  image.hpp  renderer.h  renderer.hpp
src/: b24_codesets.hpp  b24_colors.hpp  b24_controlsets.hpp  c_api.cpp  context.cpp
src/base/: aligned_alloc.cpp  aligned_allocator.hpp  always_inline.hpp  cfstr_helper.hpp  floating_helper.hpp  language_code.hpp  logger.cpp  logger.hpp  md5.c  md5.h  md5_helper.hpp  result.hpp  scoped_cfref.hpp  scoped_com_initializer.hpp  scoped_holder.hpp  tinyxml2.cpp  tinyxml2.h  unicode_helper.hpp  utf8_helper.hpp  utf_helper.hpp  wchar_helper.hpp
src/common/: caption_capi.cpp  context.cpp  context_capi.cpp
src/decoder/: b24_codesets.cpp  b24_codesets.hpp  b24_colors.cpp  b24_colors.hpp  b24_controlsets.hpp  b24_conv_tables.hpp  b24_drcs_conv.cpp  b24_drcs_conv.hpp  b24_gaiji_table.hpp  b24_macros.hpp  decoder.cpp  decoder_capi.cpp  decoder_impl.cpp  decoder_impl.hpp
src/renderer/: alpha_blend.hpp  alphablend.hpp  alphablend_generic.hpp  alphablend_x86.hpp  bitmap.cpp  bitmap.hpp  canvas.cpp  canvas.hpp  drcs_renderer.cpp  drcs_renderer.hpp  font_provider.cpp  font_provider.hpp  font_provider_android.cpp  font_provider_android.hpp  font_provider_coretext.cpp  font_provider_coretext.hpp  font_provider_directwrite.cpp  font_provider_directwrite.hpp  font_provider_fontconfig.cpp  font_provider_fontconfig.hpp  font_provider_gdi.cpp  font_provider_gdi.hpp  image_capi.cpp  open_type_gsub.cpp  open_type_gsub.hpp  rect.hpp  region_image_rearranger.cpp  region_image_rearranger.hpp  region_renderer.cpp  region_renderer.hpp  renderer.cpp  renderer_capi.cpp  renderer_impl.cpp  renderer_impl.hpp  text_renderer.cpp  text_renderer.hpp  text_renderer_coretext.cpp  text_renderer_coretext.hpp  text_renderer_directwrite.cpp  text_renderer_directwrite.hpp  (+2 more)
test/: CMakeLists.txt  test.cpp
test/alphablend/: CMakeLists.txt  test.cpp
test/capi/: CMakeLists.txt  test.c
test/caption2srt/: CMakeLists.txt  main.cpp
test/decode/: CMakeLists.txt  test.cpp
test/drcs/: CMakeLists.txt  test.cpp
test/ffmpeg/: CMakeLists.txt  stopwatch.hpp  test.cpp
test/fontconfig_freetype/: CMakeLists.txt  test.cpp
test/png_writer/: CMakeLists.txt  png_writer.cpp
test/png_writer/include/: png_writer.h  png_writer.hpp
test/sample_data/: CMakeLists.txt
test/sample_data/include/: sample_data.h
test/stopwatch/: CMakeLists.txt
test/stopwatch/include/: stopwatch.hpp
